# src/main/java/com/boldyrev/financialhelper/controller/TransactionsController.java
@@ -2,7 +2,10 @@ package com.boldyrev.financialhelper.controller;
 
 import com.boldyrev.controller.TransactionsApi;
 import com.boldyrev.dto.TransactionCreationDto;
+import com.boldyrev.dto.TransactionsFilter;
+import com.boldyrev.dto.TransactionsResponse;
 import com.boldyrev.financialhelper.service.TransactionsService;
+import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -26,5 +29,20 @@ public class TransactionsController implements TransactionsApi {
         ServerWebExchange exchange) {
         return transactionDto.flatMap(transactionsService::addTransaction)
             .thenReturn(new ResponseEntity<>(HttpStatus.CREATED));
+    }
+
+    @Override
+    public Mono<ResponseEntity<TransactionsResponse>> getUserTransactions(
+        Long userId, Mono<TransactionsFilter> transactionsFilter, ServerWebExchange exchange) {
+        return transactionsFilter.flatMap(
+                filter -> transactionsService.getTransactionsByFilter(userId, filter))
+            .map(ResponseEntity::ok);
+    }
+
+    @Override
+    public Mono<ResponseEntity<Void>> deleteTransaction(UUID transactionId,
+        ServerWebExchange exchange) {
+        return transactionsService.deleteTransaction(transactionId)
+            .thenReturn(ResponseEntity.noContent().build());
     }
 }
